_sass/main.scss
main {
   width: 100%;
   min-height: calc(100vh - 70px - 180px); /* calculate: 100% vertical height - 70px approx. header height - 120px footer height */
   @include media($medium) {
      min-height: calc(100vh - 70px - 240px); /* adjust for footer height below medium break-point */
   }

   section {
      @include outer-container(100%);
      display: block;
      background-color: white;
   }

   .section-block {
      text-align: center;
      padding: 4em 0em;
      @include span-columns(6);
      @include shift(3);
      @include media($wide) {
         @include span-columns(8);
         @include shift(2);
      }
      @include media($medium) {
         @include span-columns(10);
         @include shift(1);
      }
   }

   .no-padding-bottom {
      padding-bottom: 0;
   }

   .less-padding-top {
      padding-top: 2em;
   }

   .paragraph {
      text-align: left;
      padding-top: 2em;
   }

   .quote {
      text-align: center;
      p {
         margin-top: 2em;
         margin-bottom: 0.5em;
      }
   }

   .block-image {
      background-size: cover;
      padding-bottom: 0px;
      background-position: center top;
      background-repeat: no-repeat;
      height: 0;
      padding-top: 40%;
      @include media($medium) {
         background-size: cover;
         background-position: 12% 0px;
         padding-top: 50%;
         height: 50vh;
      }
   }

   .button {
      border: 1px solid $black;
      background-color: $white;
      border-radius: 24px;
      height: 48px;
      width: 280px;
      margin: 2em auto;
      display: block;
      text-align: center;
      &:hover {
         background-color: $black-hover;
      }
      h3 {
         color: $black;
         padding-top: 6px;
      }
   }

   .hero-button {
      background-color: $black;
      border-radius: 26px;
      height: 52px;
      width: 300px;
      margin: 2em auto 0em;
      &:hover {
         background-color: $hero-hover;
      }
      h3 {
         color: $white;
         padding-top: 8px;
      }
   }

   #home-gallery,
   #technique, #artist, #offer /* this for other pages: */ {
      display: flex;
      flex-direction: column;
      justify-content: center;
      background-color: $black;
   }

   .hero-container {
      padding-top: 3em;
      position: absolute;
      @include span-columns(8);
      @include shift(2);
      @include media($large) {
         @include span-columns(10);
         @include shift(1);
      }
      .hero-text {
         text-align: center;
      }
   }

   .body-text-link {
      color: inherit;
      border-bottom: 1px dotted $black;
      &:hover {
         opacity: 0.5;
      }
   }

   .view-image {
      a {
         position: relative;
         width: 100%;
         height: auto;
         display: block;
         cursor: pointer;
      }
      a img {
         width: 100%;
         margin-bottom: 1.33em;
         display: block;
      }
      a:after {
         content:'\A';
         position: absolute;
         width: 100%; height: 100%;
         top: 0; left: 0;
         background: $black-hover;
         opacity: 0;
         transition: $transition;
      }
      a:hover:after {
         opacity: 1;
      }
   }


// MODAL
// Based on code by Kasper Mikiewicz
   .modal {
      $modal-padding: 3em;
      $modal-background: #66dd11;

      label {
         // cursor: pointer;
         margin-bottom: 0;
      }

      input[type="checkbox"] {
         display: none;
      }

      .modal-open {
         overflow: hidden;
      }

      .modal-window { // overlay
         @include position(fixed, 0px 0px 0px 0px);
         background: $hero-hover;
         opacity: 0;
         visibility: hidden;
         z-index: 99999999999;
      }

      .modal-inner {
         border-radius: 2px;
         margin: auto;
         margin-top: 5vh;
         margin-bottom: 15vh;
      }

      .modal-container {
         position: relative;
      }

      .close-button {
         width: 100px;
         border: 1px solid red;
         h3 {
            position: absolute;
            top: 10px;
            left: 0;
            width: 100%;
            &:hover {
               color: $white;
            }
         }
      }

      .enlarged-img {
         max-height: 80vh;
         max-width: 95vw;
         cursor: pointer;
         width: auto;
         height: auto;
         margin-left: auto;
         margin-right: auto;
         border: 1px solid $black;
         border-radius: 2px;
      }

      .modal-state:checked + .modal-window {
         opacity: 1;
         visibility: visible;
      }

      .modal-state:checked + .modal-window .modal-inner {
         top: 0;
      }
   }




   // IMAGES
   #home-hero-image {
      background-image: url("/img/test.jpg");
      opacity: 0.9;
   }

   #home-banner-1 {
      background-image: url("/img/test2.jpg");
   }

   #home-banner-2 {
      background-image: url("/img/test3.jpg");
   }

   #home-banner-3 {
      background-image: url("/img/test2.jpg");
   }

   #home-banner-4 {
      background-image: url("/img/test3.jpg");
   }
}

